# abstract-name-service

./: .eslintrc.js  .prettierrc.json  README.md  assets2.json  justfile  package.json  pnpm-lock.yaml  tsconfig.json  wynd2.ts
cache/archway-1/: cw20Symbols.json  ibcBaseDenoms.json
cache/astroport/: allPairs.json  allPairs2.json  topPairs.json  topPairs2.json  total_share.json
cache/astroport-phoenix-1/: allPairs.json  topPairs.json  total_share.json
cache/astroport-pisco-1/: allPairs.json  allPairs2.json  topPairs.json  topPairs2.json  total_share.json
cache/atlantic-2/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/harpoon-4/: denomMetadata.json
cache/injective-1/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/injective-888/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/juno-1/: ibcBaseDenoms.json
cache/neutron-1/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/osmo-test-5/: denomMetadata.json  ibcBaseDenoms.json
cache/osmosis-1/: denomMetadata.json  ibcBaseDenoms.json
cache/pacific-1/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/phoenix-1/: cw20Symbols.json  ibcBaseDenoms.json
cache/pion-1/: cw20Symbols.json  denomMetadata.json  ibcBaseDenoms.json
cache/pisco-1/: cw20Symbols.json
cron/: Cargo.toml  README.md
cron/src/: assets.rs  channels.rs  contracts.rs  hashmap_diff.rs  lib.rs  pools.rs
dangerous-scripts/: Cargo.toml  README.md
dangerous-scripts/src/: lib.rs
old/: assets.json  contracts.json  pools.json
src/: app.ts  scrape.ts
(+76 files in other folders)
