[package]
name    = "script-helpers"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
cosmwasm-std   = { version = "1" }
serde          = { version = "1" }
semver         = { version = "1", default-features = false }
cw-controllers = { version = "1" }
thiserror      = { version = "1" }
cw-asset       = { version = "3" }
cw2            = { version = "1" }
cw20           = { version = "1" }
cw20-base      = { version = "1" }
cw-orch = { version = "0.19.1", features = ["daemon"] }
abstract-core = { git = "https://github.com/AbstractSDK/abstract", branch = "release-0.20", version = "0.20.0", features = [
  "interface",
] }
abstract-interface = { git = "https://github.com/AbstractSDK/abstract", branch = "release-0.20", version = "0.20.0", features = [
  "daemon",
], default-features = false }

tokio = { version = "1" }
log = "0.4.14"
anyhow = { version = "1" }
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

cosmos-sdk-proto = { version = "0.19.0", features = [
  "grpc-transport",
  "cosmwasm",
] }
serde-cw-value = "0.7.0"
sha256 = "1"
clap = { version = "4.0" }
